log
Fri Mar 20 03:24:04 AM UTC 2026: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
8ad5569
Fri Mar 20 03:26:14 AM UTC 2026: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
7321fbf
Fri Mar 20 12:01:20 PM UTC 2026: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:14: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   89 |          if(*(int)actual == elem)
      |              ^
exercises.c:89:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   89 |          if(*(int)actual == elem)
      |             ^~~~~~~~~~~~
cc1: all warnings being treated as errors
0dd1e2d
Fri Mar 20 12:01:59 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:15: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   89 |          if(*((int)actual) == elem)
      |               ^
exercises.c:89:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   89 |          if(*((int)actual) == elem)
      |             ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
9bc99a1
Fri Mar 20 12:02:20 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:13: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   89 |          if((int)actual) == elem)
      |             ^
exercises.c:89:26: error: expected expression before ‘==’ token
   89 |          if((int)actual) == elem)
      |                          ^~
exercises.c:89:10: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   89 |          if((int)actual) == elem)
      |          ^~
exercises.c:89:33: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   89 |          if((int)actual) == elem)
      |                                 ^
exercises.c:89:33: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
c5ad12e
Fri Mar 20 12:03:19 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:89:15: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   89 |          if( ((int)actual) == elem)
      |               ^
cc1: all warnings being treated as errors
a9c28a1
Fri Mar 20 12:03:39 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
a49ca50
Fri Mar 20 12:22:05 PM UTC 2026: 
 exercises.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:112:20: error: implicit declaration of function ‘createStack’; did you mean ‘create_stack’? [-Wimplicit-function-declaration]
  112 |    Stack* pilaAux= createStack();
      |                    ^~~~~~~~~~~
      |                    create_stack
exercises.c:112:20: error: initialization of ‘Stack *’ {aka ‘List *’} from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
cb14067
Fri Mar 20 12:22:33 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
e5c3d3c
Fri Mar 20 12:25:24 PM UTC 2026: 
 exercises.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  3|2
total_score: 40/70
e5c76e8
Fri Mar 20 12:30:53 PM UTC 2026: 
 exercises.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:127:32: error: expected ‘;’ before ‘push’
  127 |          elementoSup1 = top(P2)
      |                                ^
      |                                ;
  128 |          push(P1,elementoSup1);
      |          ~~~~                   
exercises.c:135:36: error: expected ‘;’ before ‘push’
  135 |          elementoSup2= top(pilaAux)
      |                                    ^
      |                                    ;
  136 |          push(P2,elementoSup2);
      |          ~~~~                       
exercises.c:124:10: error: variable ‘elementoSup1’ set but not used [-Werror=unused-but-set-variable]
  124 |    void* elementoSup1;
      |          ^~~~~~~~~~~~
cc1: all warnings being treated as errors
0ceda2f
